snippets/Nemerle.Statechart/Tests/testsuite/positive/self_transition_in_region.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;

  //flags debug;
    
   name "self transitions in region";
   
   region A
   {
     state B
     {
       entry / act1;
       a => @;
     }
     
   } and
   {
     state D
     {
       b => E;
     }
     
     state E
     {
     }
   }
   
  #>)]
  public class example
  {
  }



module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("B|D", "EntryA", "act1", "EntryB", "EntryD");
    tester.Test("a", "B|D", "ExitB", "act1", "EntryB");
    tester.Test("b", "B|E", "ExitD", "EntryE");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
act1
EntryB
EntryD
[B|D]
Ok
Processing a 'a' 
ExitB
act1
EntryB
[B|D]
Ok
Processing a 'b' 
ExitD
EntryE
[B|E]
Ok
END-OUTPUT
*/
