snippets/Nemerle.Statechart/Tests/testsuite/negative/transition_from_fork_must_have_at_least_two_targets.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  //flags testing;
  //flags debug;
  
  name "transition to fork at least two targets error";
  
  state A
  {
    a => B (C); // E: Transitions originated from fork pseudostate "TransitionAToForkAToCBya" must target at least two states in different concurrent sub regions
  }
    
  region B
  {
    
    state C
    {

    }
    
  } and
  {
    
  }
  
  #>)]
  public class example
  {
  }

